--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.10",
     "tslib": "^2.3.0",
     "tsparticles": "^3.0.0",
     "zone.js": "~0.14.10"
